welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:10: error: illegal start of simple expression
	}
        ^